2025-10-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed --resolve-symlinks with broken symlinks (PR #175, thanks @paulwkc!)
	* Released 1.18.3

2025-08-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Added `-osubtype=argv[0]` to prevent some systems from
	  auto-unmounting bindfs when the network goes down
	  (PR #172, thanks @NishiyamaPedro!)
	* Released 1.18.2

2025-06-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Enabled noattrcache by default with fuse-t
	* Dropped official support for MacFUSE, because Apple makes it too
	  difficult to test without access to a physical Mac.
	  There is best-effort support for fuse-t.
	* Released 1.18.1

2025-04-10  Martin Pärtel <martin dot partel at gmail dot com>

	* Merged fix from @jpalus (PR #160) to fix compatibility with
	  libfuse 3.17.1 (#158, #159). Thanks!
	* Released 1.18.0

2024-04-06  Martin Pärtel <martin dot partel at gmail dot com>

	* (MacOS) Added `./configure` option `--disable-macos-fs-link`
	  (issue #140)
	* Released 1.17.7

2023-11-19  Martin Pärtel <martin dot partel at gmail dot com>

	* Enabled -Wextra and fixed many compiler warnings
	  (PR #148, thanks @hartwork!)

2023-11-10  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed undefined behaviour on platforms where `uid_t` or `gid_t`
	  is signed (issue #143, thanks @hartwork!)
	* Released 1.17.6

2023-11-09  Martin Pärtel <martin dot partel at gmail dot com>

	* Support negative --{uid,gid}-offset (issue #142)
	* Released 1.17.5

2023-09-22  Martin Pärtel <martin dot partel at gmail dot com>

	* Support `mount -t bindfs` on MacOS (PR #140, thanks @Kentzo)

2023-07-15  Martin Pärtel <martin dot partel at gmail dot com>

	* MacOS and FreeBSD socket file support (PR #132,
	  thanks @slonopotamus)
	* MacOS fuse-t support (thanks @slonopotamus)
	* Released 1.17.4

2023-06-03  Martin Pärtel <martin dot partel at gmail dot com>

	* Added MacOS statfs_x implementation (issue #130,